--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet">
 
-    <link type="text/css" rel="stylesheet" href="https://jbtule.github.io/ComposableExtensions/content/style.css" />
-    <script type="text/javascript" src="https://jbtule.github.io/ComposableExtensions/content/tips.js"></script>
+    <link type="text/css" rel="stylesheet" href="http://jbtule.github.io/ComposableExtensions/content/style.css" />
+    <script type="text/javascript" src="http://jbtule.github.io/ComposableExtensions/content/tips.js"></script>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -163,7 +163,7 @@
         <div class="span3">
           <ul class="nav nav-list" id="menu">
             <li class="nav-header">ComposableExtensions</li>
-            <li><a href="https://jbtule.github.io/ComposableExtensions/index.html">Home page</a></li>
+            <li><a href="http://jbtule.github.io/ComposableExtensions/index.html">Home page</a></li>
             <li class="divider"></li>
             <li><a href="http://nuget.org/packages/ComposableExtensions">Get Library via NuGet</a></li>
             <li><a href="https://github.com/jbtule/ComposableExtensions">Source Code on GitHub</a></li>
@@ -171,10 +171,10 @@
             <li><a href="https://github.com/jbtule/ComposableExtensions/releases">Release Notes</a></li>
             
             <li class="nav-header">Getting started</li>
-            <li><a href="https://jbtule.github.io/ComposableExtensions/index.html">Home page</a></li>
+            <li><a href="http://jbtule.github.io/ComposableExtensions/index.html">Home page</a></li>
 
             <li class="nav-header">Documentation</li>
-            <li><a href="https://jbtule.github.io/ComposableExtensions/reference/index.html">API Reference</a></li>
+            <li><a href="http://jbtule.github.io/ComposableExtensions/reference/index.html">API Reference</a></li>
           </ul>
         </div>
       </div>
