--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
-<span class="i">fsi</span> <span class="o">-</span><span class="i">exec</span> <span class="i">build</span><span class="o">.</span><span class="i">fsx</span></pre>
+<span class="i">fsi</span> <span class="o">--</span><span class="i">exec</span> <span class="i">build</span><span class="o">.</span><span class="i">fsx</span></pre>
 </td>
 </tr>
 </table>
