--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <span onmouseout="hideTip(event, 'fs6', 6)" onmouseover="showTip(event, 'fs6', 6)" class="i">Seq</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs7', 7)" onmouseover="showTip(event, 'fs7', 7)" class="i">empty</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs8', 8)" onmouseover="showTip(event, 'fs8', 8)" class="i">int</span><span class="o">&gt;</span> <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs4', 9)" onmouseover="showTip(event, 'fs4', 9)" class="i">Enumerable</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs9', 10)" onmouseover="showTip(event, 'fs9', 10)" class="i">defaultIfEmpty</span> <span class="c">// seq [0]</span>
 
-[(<span class="s">&quot;</span><span class="s">Rust</span><span class="s">&quot;</span>, <span class="s">&quot;</span><span class="s">Cohle</span><span class="s">&quot;</span>); (<span class="s">&quot;</span><span class="s">Marty</span><span class="s">&quot;</span>, <span class="s">&quot;</span><span class="s">Hart</span><span class="s">&quot;</span>); (<span class="s">&quot;</span><span class="s">Maggie</span><span class="s">&quot;</span>, <span class="s">&quot;</span><span class="s">Hart</span><span class="s">&quot;</span>)] 
+[(<span class="s">&quot;</span><span class="s">Rust</span><span class="s">&quot;</span>, <span class="s">&quot;</span><span class="s">Cohle</span><span class="s">&quot;</span>); (<span class="s">&quot;</span><span class="s">Marty</span><span class="s">&quot;</span>, <span class="s">&quot;</span><span class="s">Hart</span><span class="s">&quot;</span>); (<span class="s">&quot;</span><span class="s">Maggie</span><span class="s">&quot;</span>, <span class="s">&quot;</span><span class="s">Hart</span><span class="s">&quot;</span>)]
     <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs4', 11)" onmouseover="showTip(event, 'fs4', 11)" class="i">Enumerable</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs10', 12)" onmouseover="showTip(event, 'fs10', 12)" class="i">orderBy</span> (<span class="k">fun</span> (_, <span onmouseout="hideTip(event, 'fs11', 13)" onmouseover="showTip(event, 'fs11', 13)" class="i">lastname</span>) <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs11', 14)" onmouseover="showTip(event, 'fs11', 14)" class="i">lastname</span>)
     <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs4', 15)" onmouseover="showTip(event, 'fs4', 15)" class="i">Enumerable</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs12', 16)" onmouseover="showTip(event, 'fs12', 16)" class="i">thenBy</span> (<span class="k">fun</span> (<span onmouseout="hideTip(event, 'fs13', 17)" onmouseover="showTip(event, 'fs13', 17)" class="i">firstname</span>, _) <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs13', 18)" onmouseover="showTip(event, 'fs13', 18)" class="i">firstname</span>)
   <span class="c">//seq [(&quot;Rust&quot;, &quot;Cohle&quot;); (&quot;Maggie&quot;, &quot;Hart&quot;); (&quot;Marty&quot;, &quot;Hart&quot;)]</span></pre>
@@ -82,8 +82,8 @@
 <td class="snippet"><pre class="fssnip">
 <span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 19)" onmouseover="showTip(event, 'fs1', 19)" class="i">Composable</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs14', 20)" onmouseover="showTip(event, 'fs14', 20)" class="i">System</span>
 
-[<span class="s">&quot;</span><span class="s">1</span><span class="s">&quot;</span>;<span class="s">&quot;</span><span class="s">&quot;</span>;<span class="s">&quot;</span><span class="s">2</span><span class="s">&quot;</span>;<span class="s">&quot;</span><span class="s">  </span><span class="s">&quot;</span>; <span class="s">&quot;</span><span class="s">3</span><span class="s">&quot;</span>; <span class="k">null</span>; <span class="s">&quot;</span><span class="s">4</span><span class="s">&quot;</span>] 
-   <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs6', 21)" onmouseover="showTip(event, 'fs6', 21)" class="i">Seq</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs15', 22)" onmouseover="showTip(event, 'fs15', 22)" class="i">filter</span> (<span onmouseout="hideTip(event, 'fs16', 23)" onmouseover="showTip(event, 'fs16', 23)" class="i">not</span> <span class="o">&lt;&lt;</span> <span onmouseout="hideTip(event, 'fs17', 24)" onmouseover="showTip(event, 'fs17', 24)" class="i">String</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs18', 25)" onmouseover="showTip(event, 'fs18', 25)" class="i">isNullOrWhiteSpace</span>) <span class="c">//seq[&quot;1&quot;;&quot;2&quot;;&quot;3&quot;;&quot;4&quot;]</span></pre>
+[<span class="s">&quot;</span><span class="s">One</span><span class="s">&quot;</span>;<span class="s">&quot;</span><span class="s">Two</span><span class="s">&quot;</span>;<span class="s">&quot;</span><span class="s">Three</span><span class="s">&quot;</span>]
+   <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs6', 21)" onmouseover="showTip(event, 'fs6', 21)" class="i">Seq</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs15', 22)" onmouseover="showTip(event, 'fs15', 22)" class="i">filter</span> (<span onmouseout="hideTip(event, 'fs16', 23)" onmouseover="showTip(event, 'fs16', 23)" class="i">String</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs17', 24)" onmouseover="showTip(event, 'fs17', 24)" class="i">startsWith</span> <span class="s">&quot;</span><span class="s">T</span><span class="s">&quot;</span>) <span class="c">// seq [&quot;Two&quot;;&quot;Three&quot;]</span></pre>
 </td>
 </tr>
 </table>
@@ -101,7 +101,7 @@
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
-<span class="i">PM</span><span class="o">&gt;</span> <span class="i">Install</span><span class="o">-</span><span class="i">Package</span> <span class="i">ComposableExtensions</span></pre>
+<span class="i">PM</span><span class="o">&gt;</span> <span class="i">Install</span><span class="o">-</span><span class="i">Package</span> <span onmouseout="hideTip(event, 'fs18', 25)" onmouseover="showTip(event, 'fs18', 25)" class="i">ComposableExtensions</span></pre>
 </td>
 </tr>
 </table>
@@ -111,6 +111,8 @@
 <p>The <code>generate</code> target of the F# make file <a href="https://github.com/jbtule/ComposableExtensions/blob/master/tools/Make.fsx">Make.fsx</a> provides a mechansim to identify static base class libraries and alter their parameter order and write out the module on a per class basis.</p>
 
 <p>The <a href="https://github.com/jbtule/ComposableExtensions/blob/master/tools/Generate.fsx">tool/Generate.fsx</a> script provides the generalized api for generating those wrappers.</p>
+
+<p><em>Note: inline non-mutating instance method</em></p>
 
 <p>FSUnit xUnit tests can be added in <code>.fsx</code> files in the <a href="https://github.com/jbtule/ComposableExtensions/tree/master/test">test</a> directory.</p>
 
@@ -123,7 +125,7 @@
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
-<span class="o">.</span><span class="o">/</span><span class="i">build</span><span class="o">.</span><span class="i">fsx</span> </pre>
+<span class="o">.</span><span class="o">/</span><span class="i">build</span><span class="o">.</span><span class="i">fsx</span></pre>
 </td>
 </tr>
 </table>
@@ -155,9 +157,9 @@
 <div class="tip" id="fs13">val firstname : string</div>
 <div class="tip" id="fs14">namespace Composable.System</div>
 <div class="tip" id="fs15">val filter : predicate:(&#39;T -&gt; bool) -&gt; source:seq&lt;&#39;T&gt; -&gt; seq&lt;&#39;T&gt;<br /><br />Full name: Microsoft.FSharp.Collections.Seq.filter</div>
-<div class="tip" id="fs16">val not : value:bool -&gt; bool<br /><br />Full name: Microsoft.FSharp.Core.Operators.not</div>
-<div class="tip" id="fs17">Multiple items<br />module String<br /><br />from Composable.System<br /><br />--------------------<br />module String<br /><br />from Microsoft.FSharp.Core</div>
-<div class="tip" id="fs18">val isNullOrWhiteSpace : value:string -&gt; bool<br /><br />Full name: Composable.System.String.isNullOrWhiteSpace</div>
+<div class="tip" id="fs16">Multiple items<br />module String<br /><br />from Composable.System<br /><br />--------------------<br />module String<br /><br />from Microsoft.FSharp.Core</div>
+<div class="tip" id="fs17">val startsWith : value:string -&gt; {instance}:System.String -&gt; bool<br /><br />Full name: Composable.System.String.startsWith</div>
+<div class="tip" id="fs18">namespace ComposableExtensions</div>
 
         </div>
         <div class="span3">
