--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>FSharp Composable Extensions
 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Inline composable fsharp functions around BCL static methods.">
+    <meta name="description" content="Inline composable fsharp functions around BCL static methods. Supports F# 3.0 and later with .NET runtimes v2.0,v4.0, Sliverlight 5.0 and WinRT">
     <meta name="author" content="Jay Tuley">
 
     <script src="http://code.jquery.com/jquery-1.8.0.js"></script>
@@ -36,7 +36,7 @@
           
 <h1>FSharp Composable Extensions</h1>
 
-<p>inlined composable fsharp functions around BCL static methods.</p>
+<p>inlined composable fsharp functions around BCL static methods. Supports F# 3.0 or later with .NET runtimes v2.0,v4.0, Sliverlight 5.0 and WinRT</p>
 
 <h2>Examples</h2>
 
